# The_Architect_Guide_To_LLM_Agent

./: .env_sample  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
experiments/: Agentic_RAG_llamaindex.ipynb  LangGraph_Agent_with_tools.ipynb  LangGraph_Agents.ipynb  demo_agent_using_smolagent.ipynb  demo_smolagent.ipynb  experiment_with_small_agent.ipynb  k_means_using_sbert.ipynb  llm_rag_part1.ipynb  llm_rag_part2.ipynb  llm_rag_part3.ipynb  llm_rag_part_1.ipynb  multi_agent.ipynb  rag_chunking_strategy.ipynb  rag_chunking_strategy_part2.ipynb
