[project]
name = "vizuara"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "alembic==1.17.0",
    "arize-phoenix-evals==2.5.0",
    "boto3==1.40.50",
    "cachetools==6.2.1",
    "datasets==4.2.0",
    "ddgs==9.6.1",
    "duckduckgo-search>=8.1.1",
    "fastapi==0.119.0",
    "flagembedding>=1.3.5",
    "geopandas>=1.1.1",
    "geopy>=2.4.1",
    "hf-xet>=1.1.10",
    "kaleido>=1.1.0",
    "langchain>=0.3.27",
    "langchain-community==0.3.31",
    "langchain-openai==0.3.35",
    "langfuse==3.6.2",
    "litellm==1.78.0",
    "nltk>=3.9.1",
    "notebook>=7.4.7",
    "openai==2.3.0",
    "openinference-instrumentation-smolagents==0.1.19",
    "opentelemetry-exporter-otlp>=1.37.0",
    "opentelemetry-sdk>=1.37.0",
    "plotly>=6.3.1",
    "polars>=1.33.1",
    "pymupdf==1.26.5",
    "python-dotenv>=1.1.1",
    "ruff==0.14.0",
    "scikit-learn>=1.7.2",
    "sentence-transformers==5.1.1",
    "shapely>=2.1.2",
    "smolagents[litellm]>=1.22.0",
    "spacy>=3.8.7",
    "strawberry-graphql==0.283.3",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers==4.57.0",
    "uvicorn==0.37.0",
    "kiwisolver>=1.4.9",
]

[dependency-groups]
dev = [
    "nbstripout>=0.8.1",
    "pre-commit>=4.3.0",
    "pyright>=1.1.405",
    "ruff>=0.13.2",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
line-ending = "auto"

[tool.ruff.lint]
select = ["E4", "E7", "E9","F"]
ignore = []
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
